# Rubeus

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AUTHORS.md  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE.txt  README.md  Rubeus-core.sln  RubeusCore.cbp  RubeusCore.sln  SETUP.md  SETUP_LINUX.md  SETUP_WINDOWS.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  UtilityComponentsRLoggerCreateLogFile();
Rubeus-CMake/: CMakeLists.txt  Rubeus-CMake.cpp  Rubeus-CMake.h
Rubeus-core/: .editorconfig  Rubeus-core.vcxproj  Rubeus-core.vcxproj.filters
RubeusCore/: .directory  CMakeLists.txt  Project.sln  ProjectManager.vcxproj  ProjectManager.vcxproj.filters  RubeusCore.cpp  RubeusCore.h  RubeusCore.vcxproj  RubeusCore.vcxproj.filters  cmake_install.cmake  config.h  config.h.in  cpp.hint  imgui.ini  imgui.vcxproj  imgui.vcxproj.filters  user_init.cpp  user_init.h
RubeusCore/Dependencies/RML/lib/: RMaths.lib
RubeusCore/Game/: ball.cpp  ball.h  paddle.cpp  paddle.h  sample_level.cpp  sample_level.h  sample_object.cpp  sample_object.h  user_init.cpp  user_init.h
RubeusCore/Game/game_name/: game_name.toml  settings.json
RubeusCore/Game/game_name/levels/: default.toml  global_level.toml  level_name.toml  sample_level.json
RubeusCore/Game/game_name/levels/engine_files/: sample_level.cpp  sample_level.h  sample_level2.cpp  sample_level2.h  sample_object.cpp  sample_object.h
RubeusCore/Game/lol_game/: user_init.cpp  user_init.h
RubeusCore/Game/ping_pong/: user_init.cpp  user_init.h
RubeusCore/Game/ping_pong/engine_files/: level.new_level.cpp  level.new_level.h  level.play_level.cpp  level.play_level.h  object.ball.cpp  object.ball.h  object.bat.cpp  object.bat.h  object.paddle.cpp  object.paddle.h
RubeusCore/Include/: audio_manager_component.h  awerere_box_collider_object.h  awerere_collide_data_object.h  awerere_collider_object.h  awerere_collision_engine.h  awerere_collision_grid.h  awerere_flag.h  awerere_hit_event_list.h  awerere_hit_object.h  awerere_physics_engine.h  awerere_physics_material.h  awerere_physics_object.h  awerere_plane_collider_object.h  awerere_rigid_body.h  awerere_sphere_collider_object.h  buffer.h  buffer_object.h  dynamo_main.h  engine.h  entity_object.h  game.h  game_object.h  game_scene.h  group_object.h  guerrilla_renderer_component.h  image_object.h  index_buffer.h  index_buffer_object.h  input_component.h  input_manager.h  keys.h  layer.h  layer_composition_object.h  layer_object.h  level.h  loader_component.h  logger_component.h  master_component.h  message_bus.h  message_codes.h  (+23 more)
RubeusCore/Include/GraphicComponents/: window.h
RubeusCore/Include/UtilityComponents/: loader.h
RubeusCore/ProjectManager/: CMakeLists.txt  Project.sln  ProjectManager  ProjectManager.cpp  ProjectManager.h
RubeusCore/ProjectManager/samples/: level.cpp  level.h  object.h  user_init.cpp  user_init.h
RubeusCore/Shaders/: basic.frag  basic.fragmentshader  basic.vert  basic.vertexshader  fragment.glsl
RubeusCore/Source/: audio_manager_component.cpp  awerere_box_collider_object.cpp  awerere_collide_data_object.cpp  awerere_collider_object.cpp  awerere_collision_engine.cpp  awerere_collision_grid.cpp  awerere_flag.cpp  awerere_hit_event_list.cpp  awerere_hit_object.cpp  awerere_physics_engine.cpp  awerere_physics_material.cpp  awerere_physics_object.cpp  awerere_plane_collider_object.cpp  awerere_rigid_body.cpp  awerere_sphere_collider_object.cpp  buffer.cpp  buffer_object.cpp  dynamo_main.cpp  engine.cpp  entity_object.cpp  game.cpp  game_object.cpp  group_object.cpp  guerrilla_renderer_component.cpp  image_object.cpp  index_buffer.cpp  index_buffer_object.cpp  input_component.cpp  input_manager.cpp  layer.cpp  layer_composition_object.cpp  level.cpp  loader.cpp  loader_component.cpp  logger_component.cpp  master_component.cpp  message_bus.cpp  message_object.cpp  message_system.cpp  project_manager.cpp  (+19 more)
RubeusCore/Source/Architecture/: engine.cpp  engine.h  entity_object.cpp  game.cpp  game_object.cpp  game_object.h  level.h  master_component.cpp  master_component.h  world.cpp
RubeusCore/Source/AudioComponents/: audio_manager_component.cpp  audio_manager_component.h
RubeusCore/Source/Awerere/: awerere_collide_data_object.cpp  awerere_collide_data_object.h  awerere_collider_object.cpp  awerere_collision_engine.cpp  awerere_collision_engine.h  awerere_flag.cpp  awerere_flag.h  awerere_physics_engine.cpp  awerere_physics_material.cpp  awerere_physics_material.h  awerere_physics_object.cpp  awerere_physics_object.h  awerere_plane_collider_object.cpp  awerere_plane_collider_object.h  awerere_sphere_collider_object.h
RubeusCore/Source/GraphicComponents/: buffer_object.cpp  game_scene.cpp  guerrilla_renderer_component.cpp  image_object.cpp  layer_object.h  main_layer.cpp  main_layer.h  renderer_component.h  shader_component.cpp  simple_renderer_component.h  sprite_object.cpp  static_sprite_object.cpp  static_sprite_object.h  texture_object.cpp  window_component.cpp  window_component.h
RubeusCore/Source/InputManager/: input_manager.cpp  input_manager.h
RubeusCore/Source/MessageSystem/: message_bus.cpp  message_bus.h  message_codes.cpp  message_codes.h  message_object.cpp  message_object.h  message_system.cpp  message_system.h
RubeusCore/Source/ProjectManager/: project_manager.cpp
RubeusCore/Source/RML/: rubeus_maths_library.cpp  rubeus_maths_library.h
RubeusCore/Source/UtilityComponents/: loader_component.cpp  loader_component.h  logger_component.h  timer_component.h
RubeusCore/Tests/: test_message_system.cpp
cmake_modules/: FindGLFW.cmake
docs/: CNAME  Doxyfile  Doxyfile-mcss  README.md  annotated.html  annotated_dup.js  class_loader_component.html  class_master_component.html  class_rubeus_1_1_graphic_components_1_1_r_window_component-members.html  class_rubeus_1_1_graphic_components_1_1_r_window_component.html  class_rubeus_1_1_graphic_components_1_1_r_window_component.js  class_rubeus_1_1_r_master_component.html  (+31 more)
(+813 files in other folders)
